Fix the animation of the navbar. In the layouts component I added the Navbar and Footer Component, useLocation in Layouts component for 404. In the 404 components I change useLocation to useNavigition wrap in useEffect for change the routes (#2)

--- a/src/components/styles/app.scss
+++ b/src/components/styles/app.scss
@@ -1,3 +1,11 @@
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 @import "./variables";
 
 // 404 Page
